# AlexNetRT

./: .gitignore  CMakeLists.txt  README.md
data/alexnet/: cat.ppm  dog.ppm  hotdog.ppm  prepare_image.sh
src/: alexnetRT.cpp
utils/: utils.h
